--- a/app/src/main/res/layout/horizontal_view_list_item.xml
+++ b/app/src/main/res/layout/horizontal_view_list_item.xml
@@ -15,8 +15,9 @@
         android:layout_gravity="center"
         android:layout_marginTop="3dp"
         android:layout_marginBottom="3dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"/>
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:clickable="true"
+        android:scaleType="fitXY"/>
 
 </android.support.v7.widget.CardView>
